--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
       </div>
       <div class="feature-card">
         <h3>Secure & Reliable</h3>
-        <p>Built with top-tier security to ensure your scripts run safely.</p>
+        <p>Undetected by anti-cheat and free from viruses.</p>
       </div>
       <div class="feature-card">
         <h3>User-Friendly</h3>
@@ -440,15 +440,15 @@
       </div>
       <div class="feature-card">
         <h3>24/7 Support</h3>
-        <p>Our dedicated support team is always here to help you.</p>
+        <p>Contact me at telegram @quiving or by e-mail contact@getsolara.dev, cmdsoftworks@proton.me</p>
       </div>
       <div class="feature-card">
         <h3>Advanced Scripting</h3>
         <p>Supports advanced scripting features for complex tasks.</p>
       </div>
       <div class="feature-card">
-        <h3>Community Driven</h3>
-        <p>Regular updates driven by community feedback and needs.</p>
+        <h3>Completely free</h3>
+        <p>Solara was pretty much a passion project, so money wasn't in mind.</p>
       </div>
     </div>
   </div>
@@ -456,9 +456,9 @@
   <!-- Reviews section -->
   <div class="reviews">
     <h3>What People Are Saying About Us</h3>
-    <p>"Solara made my scripting experience so much easier. I trust it completely!"</p>
-    <p>"By far the best external executor out there. Reliable and fast!"</p>
-    <p>"Amazing support and great performance. A must-have tool!"</p>
+    <p>"Solara is your only good option for rn. No paid executors that are good exist yet."</p>
+    <p>"By far the best external executor out there."</p>
+    <p>"Amazing support and great performance."</p>
   </div>
 
   <!-- Particles effect -->
