--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <!-- Meta Tags for SEO -->
   <meta name="description" content="Solara is the first and best external executor for Roblox after Byfron. Experience unparalleled scripting performance, security, and reliability. Download now!">
   <meta name="keywords" content="Solara, Roblox executor, Roblox script executor, external executor, Byfron, Roblox scripting, Roblox hacks, Roblox exploits">
-  <meta name="author" content="Solara Team">
+  <meta name="author" content="Solara Team, quiving, CMDSoftworks">
   <meta name="robots" content="index, follow">
   <meta property="og:title" content="Solara External - The Best Roblox Executor">
   <meta property="og:description" content="Solara is the first and best external executor for Roblox after Byfron. Experience unparalleled scripting performance, security, and reliability. Download now!">
